# starting_python_project

./: .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml
