[tool.poetry]
name = "noframeworkwealth"
version = "0.1.0"
description = ""
authors = ["Harm Aalbers <haalbers@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
black = "24.8.0"
pytest = "^8.3.3"
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[tool.commit-msg]
grep = "pre-commit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
